# digesto-hybrid-search

./: .gitignore  Dockerfile  Dockerfile-new  Dockerfile-old  README.md  dense.py  embeddings_generator.py  embeddings_generator_nltk.py  embeddings_generator_spacy.py  extract_sections.py  extract_sections_from_failures.py  main.py  new-failures.txt  pyproject.toml  requirements.txt  sentence.py  word-counter.py
downloader/: downloader_converter.py
indexers/dense_indexer/: embeddings_generator.py
indexers/sparse_indexer/: terrier_indexer.py
old/: downloader_converter.py  embeddings_generator.py  embeddings_generator_nltk.py  extract_sections.py  failures.txt  requirements.txt  word-counter.py
preprocessors/digest_downloader_converter/: __init__.py  downloader_converter.py
preprocessors/sections_splitter/: extract_sections.py  extract_sections_from_failures.py
preprocessors/sentence_splitter/: sentence.py
retrievers/current_digest/: current_digest_retriever.py
retrievers/dense_retriever/: dense_retriever.py
retrievers/hybrid_retriever/: hybrid_retriever.py
retrievers/sparse_retriever/: terrier_retriever.py
utils/: execution_cleaner.py  file_eraser.py  query_executor.py  url_finder.py
utils/objects/: document.py  ranking.py
